--- a/Files/rrs/mi.bib
+++ b/Files/rrs/mi.bib
@@ -1,4 +1,24 @@
+@article{rice2003ecological,
+  title={Ecological niche differentiation in the Aphelocoma jays: a phylogenetic perspective},
+  author={Rice, Nathan H and Martinez-Meyer, Enrique and Peterson, A Townsend},
+  journal={Biological Journal of the Linnean Society},
+  volume={80},
+  number={3},
+  pages={369--383},
+  year={2003},
+  publisher={Oxford University Press}
+}
 
+@article{galbraith2015supplementary,
+  title={Supplementary feeding restructures urban bird communities},
+  author={Galbraith, Josie A and Beggs, Jacqueline R and Jones, Darryl N and Stanley, Margaret C},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={112},
+  number={20},
+  pages={E2648--E2657},
+  year={2015},
+  publisher={National Acad Sciences}
+}
 
 @article{dingemanse2013between,
   title={Between-individual differences in behavioural plasticity within populations: causes and consequences},
